Connect allotment api to allotment module
