# api/allotment/api/swagger/swagger.yaml
@@ -18,45 +18,38 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
-    get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
-      parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-  /hotel:
-    x-swagger-router-controller: hotel
+  /masterdata/hotel:
+    x-swagger-router-controller: masterdata_hotel
     get:
       operationId: list
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/HotelsListResponse"
+            $ref: "#/definitions/MasterdataHotelsListResponse"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /hotel/{code}:
-    x-swagger-router-controller: hotel
+    post:
+      operationId: create
+      parameters:
+        - name: data
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/MasterdataHotel"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/MasterdataHotelDetailResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /masterdata/hotel/{code}:
+    x-swagger-router-controller: masterdata_hotel
     get:
       operationId: get
       parameters:
@@ -68,7 +61,44 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/HotelDetailResponse"
+            $ref: "#/definitions/MasterdataHotelDetailResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      operationId: drop
+      parameters:
+        - name: code
+          in: path
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      operationId: update
+      parameters:
+        - name: code
+          in: path
+          required: true
+          type: string
+        - name: data
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/MasterdataHotel"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/MasterdataHotelDetailResponse"
         default:
           description: Error
           schema:
@@ -77,41 +107,39 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HotelsListResponse:
+  MasterdataHotelsListResponse:
     required:
       - data
     properties:
       data:
         type: array
         items:
-          $ref: "#/definitions/Hotel"
+          $ref: "#/definitions/MasterdataHotel"
       message:
         type: string
 
-  HotelDetailResponse:
+  MasterdataHotelDetailResponse:
     type: object
     properties:
       data:
-        $ref: "#/definitions/Hotel"
+        $ref: "#/definitions/MasterdataHotel"
       message:
         type: string
-
-  HelloWorldResponse:
-    required:
-      - message
+  GeneralResponse:
+    type: object
     properties:
       message:
         type: string
-
+      success:
+        type: boolean
   ErrorResponse:
     type: object
     required:
       - message
     properties:
       message:
-        type: string
-
-  Hotel:
+        type: [string, object]
+  MasterdataHotel:
     type: object
     required:
       - code
