# api/allotment/app.js
@@ -1,23 +1,33 @@
 'use strict';
 
-var SwaggerExpress = require('swagger-express-mw');
-var app = require('express')();
+const SwaggerExpress = require('swagger-express-mw');
+const app = require('express')();
+const dbPool = require('./api/helpers/db_pool');
+
 module.exports = app; // for testing
 
-var config = {
-  appRoot: __dirname // required config
+const config = {
+    appRoot: __dirname // required config
 };
 
-SwaggerExpress.create(config, function(err, swaggerExpress) {
-  if (err) { throw err; }
+const dbConfig = {
+    host: 'localhost',
+    port: '27017',
+    db: 'test'
+};
 
-  // install middleware
-  swaggerExpress.register(app);
+SwaggerExpress.create(config, function (err, swaggerExpress) {
+    if (err) {
+        throw err;
+    }
 
-  var port = process.env.PORT || 10010;
-  app.listen(port);
+    // install middleware
+    swaggerExpress.register(app);
 
-  if (swaggerExpress.runner.swagger.paths['/hello']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
-  }
+    const port = process.env.PORT || 10010;
+    dbPool.init(dbConfig).then(() => {
+        app.listen(port);
+    }).catch((err) => {
+        console.log(err);
+    });
 });
